# g2p2

./: .gitignore  Cargo.toml  README.md  codecov.yml
.githooks/: pre-commit
.github/workflows/: ci.yml  crates.yml  python.yml  release.yml
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/g2p2/: __init__.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_numbers.py
data/lex/: ja.tsv
data/silver/: jw.tsv  ln.tsv  sn.tsv  so.tsv  su.tsv  tt.tsv
g2p/: Cargo.toml  README.md
g2p/src/: decode.rs  lang.rs  lexicon.rs  lib.rs  model.rs  normalize.rs  numbers.rs  similarity.rs
scripts/: groups.json  pack_models.py
service/: Cargo.toml  README.md
service/scripts/: fetch-models.sh
service/src/: error.rs  handlers.rs  lang_detect.rs  main.rs  state.rs  types.rs
xtask/: Cargo.toml
xtask/data/: fr.sample.tsv  wikipron_index.txt
xtask/src/: align.rs  bench.rs  fetch.rs  kaikki.rs  main.rs  silver.rs  train.rs
