[package]
name = "g2p2-core"
version = "0.2.0"
edition = "2021"
description = "Zero-dependency grapheme-to-phoneme for the 100 Whisper languages (n-gram + lexicon, pure Rust)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jqueguiner/g2p2"
homepage = "https://github.com/jqueguiner/g2p2"
readme = "README.md"
keywords = ["g2p", "grapheme-to-phoneme", "phonemizer", "ipa", "phonetics"]
categories = ["text-processing", "internationalization"]

# Keep the runtime crate importable as `g2p` (the crates.io name `g2p` is taken),
# so `use g2p::...` across the workspace and downstream stays unchanged.
[lib]
name = "g2p"

[features]
# Numeral normalization: spell digits as words before G2P ("12" -> "douze"),
# 120+ languages, via num2words2-core. OFF by default so the runtime stays
# zero-dependency; the Python wheel builds with it enabled.
numbers = ["dep:num2words2-core"]

[dependencies]
num2words2-core = { version = "0.1", optional = true }
