[package]
name = "g2p-rs"
version = "0.1.0"
edition = "2021"
description = "Python bindings for g2p — zero-dependency grapheme-to-phoneme for the 100 Whisper languages"
license = "MIT OR Apache-2.0"

[lib]
name = "g2p_rs"
crate-type = ["cdylib"]

[dependencies]
g2p = { path = "../../g2p" }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
