[package]
name = "g2p2"
version = "0.1.2"
edition = "2021"
description = "Python bindings for g2p — zero-dependency grapheme-to-phoneme for the 100 Whisper languages"
license = "MIT OR Apache-2.0"

[lib]
name = "_native"
crate-type = ["cdylib"]

[features]
# Numeral normalization is ON by default: the wheel ships with it, so numbers
# work out of the box with no optional Python dependency.
default = ["numbers"]
numbers = ["g2p/numbers"]

[dependencies]
g2p = { path = "../../g2p", package = "g2p2-core" }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py38"] }
