[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "g2p2"
version = "0.2.1"
description = "Zero-dependency grapheme-to-phoneme for the 100 Whisper languages (Rust core)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "jqueguiner" }]
keywords = ["g2p", "grapheme-to-phoneme", "phonemizer", "ipa", "whisper", "phonetics"]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing :: Linguistic",
  "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
# One extra per language: pip install "g2p2[fr]" pulls just French.
# "g2p2[all]" pulls every model via the g2p2-models meta.
all = ["g2p2-models==0.2.1"]
af = ["g2p2-lang-af==0.2.1"]
am = ["g2p2-lang-am==0.2.1"]
ar = ["g2p2-lang-ar==0.2.1"]
as = ["g2p2-lang-as==0.2.1"]
az = ["g2p2-lang-az==0.2.1"]
ba = ["g2p2-lang-ba==0.2.1"]
be = ["g2p2-lang-be==0.2.1"]
bg = ["g2p2-lang-bg==0.2.1"]
bn = ["g2p2-lang-bn==0.2.1"]
bo = ["g2p2-lang-bo==0.2.1"]
br = ["g2p2-lang-br==0.2.1"]
bs = ["g2p2-lang-bs==0.2.1"]
ca = ["g2p2-lang-ca==0.2.1"]
cs = ["g2p2-lang-cs==0.2.1"]
cy = ["g2p2-lang-cy==0.2.1"]
da = ["g2p2-lang-da==0.2.1"]
de = ["g2p2-lang-de==0.2.1"]
el = ["g2p2-lang-el==0.2.1"]
en = ["g2p2-lang-en==0.2.1"]
es = ["g2p2-lang-es==0.2.1"]
et = ["g2p2-lang-et==0.2.1"]
eu = ["g2p2-lang-eu==0.2.1"]
fa = ["g2p2-lang-fa==0.2.1"]
fi = ["g2p2-lang-fi==0.2.1"]
fo = ["g2p2-lang-fo==0.2.1"]
fr = ["g2p2-lang-fr==0.2.1"]
gl = ["g2p2-lang-gl==0.2.1"]
gu = ["g2p2-lang-gu==0.2.1"]
ha = ["g2p2-lang-ha==0.2.1"]
haw = ["g2p2-lang-haw==0.2.1"]
he = ["g2p2-lang-he==0.2.1"]
hi = ["g2p2-lang-hi==0.2.1"]
hr = ["g2p2-lang-hr==0.2.1"]
ht = ["g2p2-lang-ht==0.2.1"]
hu = ["g2p2-lang-hu==0.2.1"]
hy = ["g2p2-lang-hy==0.2.1"]
id = ["g2p2-lang-id==0.2.1"]
is = ["g2p2-lang-is==0.2.1"]
it = ["g2p2-lang-it==0.2.1"]
ja = ["g2p2-lang-ja==0.2.1"]
jw = ["g2p2-lang-jw==0.2.1"]
ka = ["g2p2-lang-ka==0.2.1"]
kk = ["g2p2-lang-kk==0.2.1"]
km = ["g2p2-lang-km==0.2.1"]
kn = ["g2p2-lang-kn==0.2.1"]
ko = ["g2p2-lang-ko==0.2.1"]
la = ["g2p2-lang-la==0.2.1"]
lb = ["g2p2-lang-lb==0.2.1"]
ln = ["g2p2-lang-ln==0.2.1"]
lo = ["g2p2-lang-lo==0.2.1"]
lt = ["g2p2-lang-lt==0.2.1"]
lv = ["g2p2-lang-lv==0.2.1"]
mg = ["g2p2-lang-mg==0.2.1"]
mi = ["g2p2-lang-mi==0.2.1"]
mk = ["g2p2-lang-mk==0.2.1"]
ml = ["g2p2-lang-ml==0.2.1"]
mn = ["g2p2-lang-mn==0.2.1"]
mr = ["g2p2-lang-mr==0.2.1"]
ms = ["g2p2-lang-ms==0.2.1"]
mt = ["g2p2-lang-mt==0.2.1"]
my = ["g2p2-lang-my==0.2.1"]
ne = ["g2p2-lang-ne==0.2.1"]
nl = ["g2p2-lang-nl==0.2.1"]
nn = ["g2p2-lang-nn==0.2.1"]
no = ["g2p2-lang-no==0.2.1"]
oc = ["g2p2-lang-oc==0.2.1"]
pa = ["g2p2-lang-pa==0.2.1"]
pl = ["g2p2-lang-pl==0.2.1"]
ps = ["g2p2-lang-ps==0.2.1"]
pt = ["g2p2-lang-pt==0.2.1"]
ro = ["g2p2-lang-ro==0.2.1"]
ru = ["g2p2-lang-ru==0.2.1"]
sa = ["g2p2-lang-sa==0.2.1"]
sd = ["g2p2-lang-sd==0.2.1"]
si = ["g2p2-lang-si==0.2.1"]
sk = ["g2p2-lang-sk==0.2.1"]
sl = ["g2p2-lang-sl==0.2.1"]
sn = ["g2p2-lang-sn==0.2.1"]
so = ["g2p2-lang-so==0.2.1"]
sq = ["g2p2-lang-sq==0.2.1"]
sr = ["g2p2-lang-sr==0.2.1"]
su = ["g2p2-lang-su==0.2.1"]
sv = ["g2p2-lang-sv==0.2.1"]
sw = ["g2p2-lang-sw==0.2.1"]
ta = ["g2p2-lang-ta==0.2.1"]
te = ["g2p2-lang-te==0.2.1"]
tg = ["g2p2-lang-tg==0.2.1"]
th = ["g2p2-lang-th==0.2.1"]
tk = ["g2p2-lang-tk==0.2.1"]
tl = ["g2p2-lang-tl==0.2.1"]
tr = ["g2p2-lang-tr==0.2.1"]
tt = ["g2p2-lang-tt==0.2.1"]
uk = ["g2p2-lang-uk==0.2.1"]
ur = ["g2p2-lang-ur==0.2.1"]
uz = ["g2p2-lang-uz==0.2.1"]
vi = ["g2p2-lang-vi==0.2.1"]
yi = ["g2p2-lang-yi==0.2.1"]
yo = ["g2p2-lang-yo==0.2.1"]
yue = ["g2p2-lang-yue==0.2.1"]
zh = ["g2p2-lang-zh==0.2.1"]

[project.urls]
Repository = "https://github.com/jqueguiner/g2p2"

[tool.maturin]
manifest-path = "Cargo.toml"
python-source = "python"
module-name = "g2p2._native"
features = ["pyo3/extension-module"]
