[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "g2p2"
version = "0.2.1"
description = "Zero-dependency grapheme-to-phoneme for the 100 Whisper languages (Rust core)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "jqueguiner" }]
keywords = ["g2p", "grapheme-to-phoneme", "phonemizer", "ipa", "whisper", "phonetics"]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing :: Linguistic",
  "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
# Two ways to slice the offline models, all pinned to this version:
#   pip install "g2p2[all]"       -> every model (g2p2-models meta)
#   pip install "g2p2[romance]"   -> a whole language family
#   pip install "g2p2[fr]"        -> convenience alias -> its family (romance)
# Data lives in ~14 g2p2-group-* packages (one per family), not 100 projects.
all = ["g2p2-models==0.2.1"]
romance = ["g2p2-group-romance==0.2.1"]
germanic = ["g2p2-group-germanic==0.2.1"]
slavic = ["g2p2-group-slavic==0.2.1"]
indic = ["g2p2-group-indic==0.2.1"]
iranian = ["g2p2-group-iranian==0.2.1"]
turkic = ["g2p2-group-turkic==0.2.1"]
semitic = ["g2p2-group-semitic==0.2.1"]
cjk = ["g2p2-group-cjk==0.2.1"]
sea = ["g2p2-group-sea==0.2.1"]
celtic = ["g2p2-group-celtic==0.2.1"]
other_euro = ["g2p2-group-other-euro==0.2.1"]
african = ["g2p2-group-african==0.2.1"]
pacific = ["g2p2-group-pacific==0.2.1"]
other = ["g2p2-group-other==0.2.1"]

# per-language aliases -> the family package that carries that model
af = ["g2p2-group-germanic==0.2.1"]
am = ["g2p2-group-semitic==0.2.1"]
ar = ["g2p2-group-semitic==0.2.1"]
as = ["g2p2-group-indic==0.2.1"]
az = ["g2p2-group-turkic==0.2.1"]
ba = ["g2p2-group-turkic==0.2.1"]
be = ["g2p2-group-slavic==0.2.1"]
bg = ["g2p2-group-slavic==0.2.1"]
bn = ["g2p2-group-indic==0.2.1"]
bo = ["g2p2-group-other==0.2.1"]
br = ["g2p2-group-celtic==0.2.1"]
bs = ["g2p2-group-slavic==0.2.1"]
ca = ["g2p2-group-romance==0.2.1"]
cs = ["g2p2-group-slavic==0.2.1"]
cy = ["g2p2-group-celtic==0.2.1"]
da = ["g2p2-group-germanic==0.2.1"]
de = ["g2p2-group-germanic==0.2.1"]
el = ["g2p2-group-other-euro==0.2.1"]
en = ["g2p2-group-germanic==0.2.1"]
es = ["g2p2-group-romance==0.2.1"]
et = ["g2p2-group-other-euro==0.2.1"]
eu = ["g2p2-group-other-euro==0.2.1"]
fa = ["g2p2-group-iranian==0.2.1"]
fi = ["g2p2-group-other-euro==0.2.1"]
fo = ["g2p2-group-germanic==0.2.1"]
fr = ["g2p2-group-romance==0.2.1"]
gl = ["g2p2-group-romance==0.2.1"]
gu = ["g2p2-group-indic==0.2.1"]
ha = ["g2p2-group-african==0.2.1"]
haw = ["g2p2-group-pacific==0.2.1"]
he = ["g2p2-group-semitic==0.2.1"]
hi = ["g2p2-group-indic==0.2.1"]
hr = ["g2p2-group-slavic==0.2.1"]
ht = ["g2p2-group-romance==0.2.1"]
hu = ["g2p2-group-other-euro==0.2.1"]
hy = ["g2p2-group-other-euro==0.2.1"]
id = ["g2p2-group-sea==0.2.1"]
is = ["g2p2-group-germanic==0.2.1"]
it = ["g2p2-group-romance==0.2.1"]
ja = ["g2p2-group-cjk==0.2.1"]
jw = ["g2p2-group-sea==0.2.1"]
ka = ["g2p2-group-other-euro==0.2.1"]
kk = ["g2p2-group-turkic==0.2.1"]
km = ["g2p2-group-sea==0.2.1"]
kn = ["g2p2-group-indic==0.2.1"]
ko = ["g2p2-group-cjk==0.2.1"]
la = ["g2p2-group-romance==0.2.1"]
lb = ["g2p2-group-germanic==0.2.1"]
ln = ["g2p2-group-african==0.2.1"]
lo = ["g2p2-group-sea==0.2.1"]
lt = ["g2p2-group-other-euro==0.2.1"]
lv = ["g2p2-group-other-euro==0.2.1"]
mg = ["g2p2-group-african==0.2.1"]
mi = ["g2p2-group-pacific==0.2.1"]
mk = ["g2p2-group-slavic==0.2.1"]
ml = ["g2p2-group-indic==0.2.1"]
mn = ["g2p2-group-other==0.2.1"]
mr = ["g2p2-group-indic==0.2.1"]
ms = ["g2p2-group-sea==0.2.1"]
mt = ["g2p2-group-semitic==0.2.1"]
my = ["g2p2-group-sea==0.2.1"]
ne = ["g2p2-group-indic==0.2.1"]
nl = ["g2p2-group-germanic==0.2.1"]
nn = ["g2p2-group-germanic==0.2.1"]
no = ["g2p2-group-germanic==0.2.1"]
oc = ["g2p2-group-romance==0.2.1"]
pa = ["g2p2-group-indic==0.2.1"]
pl = ["g2p2-group-slavic==0.2.1"]
ps = ["g2p2-group-iranian==0.2.1"]
pt = ["g2p2-group-romance==0.2.1"]
ro = ["g2p2-group-romance==0.2.1"]
ru = ["g2p2-group-slavic==0.2.1"]
sa = ["g2p2-group-indic==0.2.1"]
sd = ["g2p2-group-indic==0.2.1"]
si = ["g2p2-group-indic==0.2.1"]
sk = ["g2p2-group-slavic==0.2.1"]
sl = ["g2p2-group-slavic==0.2.1"]
sn = ["g2p2-group-african==0.2.1"]
so = ["g2p2-group-african==0.2.1"]
sq = ["g2p2-group-other-euro==0.2.1"]
sr = ["g2p2-group-slavic==0.2.1"]
su = ["g2p2-group-sea==0.2.1"]
sv = ["g2p2-group-germanic==0.2.1"]
sw = ["g2p2-group-african==0.2.1"]
ta = ["g2p2-group-indic==0.2.1"]
te = ["g2p2-group-indic==0.2.1"]
tg = ["g2p2-group-iranian==0.2.1"]
th = ["g2p2-group-sea==0.2.1"]
tk = ["g2p2-group-turkic==0.2.1"]
tl = ["g2p2-group-sea==0.2.1"]
tr = ["g2p2-group-turkic==0.2.1"]
tt = ["g2p2-group-turkic==0.2.1"]
uk = ["g2p2-group-slavic==0.2.1"]
ur = ["g2p2-group-indic==0.2.1"]
uz = ["g2p2-group-turkic==0.2.1"]
vi = ["g2p2-group-sea==0.2.1"]
yi = ["g2p2-group-germanic==0.2.1"]
yo = ["g2p2-group-african==0.2.1"]
yue = ["g2p2-group-cjk==0.2.1"]
zh = ["g2p2-group-cjk==0.2.1"]

[project.urls]
Repository = "https://github.com/jqueguiner/g2p2"

[tool.maturin]
manifest-path = "Cargo.toml"
python-source = "python"
module-name = "g2p2._native"
features = ["pyo3/extension-module"]
