[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "g2p2"
version = "0.2.2"
description = "Zero-dependency grapheme-to-phoneme for the 100 Whisper languages (Rust core)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "jqueguiner" }]
keywords = ["g2p", "grapheme-to-phoneme", "phonemizer", "ipa", "whisper", "phonetics"]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing :: Linguistic",
  "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
# Two ways to slice the offline models, all pinned to this version:
#   pip install "g2p2[all]"       -> every model (g2p2-models meta)
#   pip install "g2p2[romance]"   -> a whole language family
#   pip install "g2p2[fr]"        -> convenience alias -> its family (romance)
# Data lives in ~14 g2p2-group-* packages (one per family), not 100 projects.
all = ["g2p2-models==0.2.2"]
# Numeral normalization: spell digits as words before G2P ("12" -> "douze"),
# 120+ languages, via num2words2. Enables g2p2.expand_numbers + auto-expansion
# in phonemize. Orthogonal to the model extras above.
numbers = ["num2words2>=1.0.18"]
romance = ["g2p2-group-romance==0.2.2"]
germanic = ["g2p2-group-germanic==0.2.2"]
slavic = ["g2p2-group-slavic==0.2.2"]
indic = ["g2p2-group-indic==0.2.2"]
iranian = ["g2p2-group-iranian==0.2.2"]
turkic = ["g2p2-group-turkic==0.2.2"]
semitic = ["g2p2-group-semitic==0.2.2"]
cjk = ["g2p2-group-cjk==0.2.2"]
sea = ["g2p2-group-sea==0.2.2"]
celtic = ["g2p2-group-celtic==0.2.2"]
other_euro = ["g2p2-group-other-euro==0.2.2"]
african = ["g2p2-group-african==0.2.2"]
pacific = ["g2p2-group-pacific==0.2.2"]
other = ["g2p2-group-other==0.2.2"]

# per-language aliases -> the family package that carries that model
af = ["g2p2-group-germanic==0.2.2"]
am = ["g2p2-group-semitic==0.2.2"]
ar = ["g2p2-group-semitic==0.2.2"]
as = ["g2p2-group-indic==0.2.2"]
az = ["g2p2-group-turkic==0.2.2"]
ba = ["g2p2-group-turkic==0.2.2"]
be = ["g2p2-group-slavic==0.2.2"]
bg = ["g2p2-group-slavic==0.2.2"]
bn = ["g2p2-group-indic==0.2.2"]
bo = ["g2p2-group-other==0.2.2"]
br = ["g2p2-group-celtic==0.2.2"]
bs = ["g2p2-group-slavic==0.2.2"]
ca = ["g2p2-group-romance==0.2.2"]
cs = ["g2p2-group-slavic==0.2.2"]
cy = ["g2p2-group-celtic==0.2.2"]
da = ["g2p2-group-germanic==0.2.2"]
de = ["g2p2-group-germanic==0.2.2"]
el = ["g2p2-group-other-euro==0.2.2"]
en = ["g2p2-group-germanic==0.2.2"]
es = ["g2p2-group-romance==0.2.2"]
et = ["g2p2-group-other-euro==0.2.2"]
eu = ["g2p2-group-other-euro==0.2.2"]
fa = ["g2p2-group-iranian==0.2.2"]
fi = ["g2p2-group-other-euro==0.2.2"]
fo = ["g2p2-group-germanic==0.2.2"]
fr = ["g2p2-group-romance==0.2.2"]
gl = ["g2p2-group-romance==0.2.2"]
gu = ["g2p2-group-indic==0.2.2"]
ha = ["g2p2-group-african==0.2.2"]
haw = ["g2p2-group-pacific==0.2.2"]
he = ["g2p2-group-semitic==0.2.2"]
hi = ["g2p2-group-indic==0.2.2"]
hr = ["g2p2-group-slavic==0.2.2"]
ht = ["g2p2-group-romance==0.2.2"]
hu = ["g2p2-group-other-euro==0.2.2"]
hy = ["g2p2-group-other-euro==0.2.2"]
id = ["g2p2-group-sea==0.2.2"]
is = ["g2p2-group-germanic==0.2.2"]
it = ["g2p2-group-romance==0.2.2"]
ja = ["g2p2-group-cjk==0.2.2"]
jw = ["g2p2-group-sea==0.2.2"]
ka = ["g2p2-group-other-euro==0.2.2"]
kk = ["g2p2-group-turkic==0.2.2"]
km = ["g2p2-group-sea==0.2.2"]
kn = ["g2p2-group-indic==0.2.2"]
ko = ["g2p2-group-cjk==0.2.2"]
la = ["g2p2-group-romance==0.2.2"]
lb = ["g2p2-group-germanic==0.2.2"]
ln = ["g2p2-group-african==0.2.2"]
lo = ["g2p2-group-sea==0.2.2"]
lt = ["g2p2-group-other-euro==0.2.2"]
lv = ["g2p2-group-other-euro==0.2.2"]
mg = ["g2p2-group-african==0.2.2"]
mi = ["g2p2-group-pacific==0.2.2"]
mk = ["g2p2-group-slavic==0.2.2"]
ml = ["g2p2-group-indic==0.2.2"]
mn = ["g2p2-group-other==0.2.2"]
mr = ["g2p2-group-indic==0.2.2"]
ms = ["g2p2-group-sea==0.2.2"]
mt = ["g2p2-group-semitic==0.2.2"]
my = ["g2p2-group-sea==0.2.2"]
ne = ["g2p2-group-indic==0.2.2"]
nl = ["g2p2-group-germanic==0.2.2"]
nn = ["g2p2-group-germanic==0.2.2"]
no = ["g2p2-group-germanic==0.2.2"]
oc = ["g2p2-group-romance==0.2.2"]
pa = ["g2p2-group-indic==0.2.2"]
pl = ["g2p2-group-slavic==0.2.2"]
ps = ["g2p2-group-iranian==0.2.2"]
pt = ["g2p2-group-romance==0.2.2"]
ro = ["g2p2-group-romance==0.2.2"]
ru = ["g2p2-group-slavic==0.2.2"]
sa = ["g2p2-group-indic==0.2.2"]
sd = ["g2p2-group-indic==0.2.2"]
si = ["g2p2-group-indic==0.2.2"]
sk = ["g2p2-group-slavic==0.2.2"]
sl = ["g2p2-group-slavic==0.2.2"]
sn = ["g2p2-group-african==0.2.2"]
so = ["g2p2-group-african==0.2.2"]
sq = ["g2p2-group-other-euro==0.2.2"]
sr = ["g2p2-group-slavic==0.2.2"]
su = ["g2p2-group-sea==0.2.2"]
sv = ["g2p2-group-germanic==0.2.2"]
sw = ["g2p2-group-african==0.2.2"]
ta = ["g2p2-group-indic==0.2.2"]
te = ["g2p2-group-indic==0.2.2"]
tg = ["g2p2-group-iranian==0.2.2"]
th = ["g2p2-group-sea==0.2.2"]
tk = ["g2p2-group-turkic==0.2.2"]
tl = ["g2p2-group-sea==0.2.2"]
tr = ["g2p2-group-turkic==0.2.2"]
tt = ["g2p2-group-turkic==0.2.2"]
uk = ["g2p2-group-slavic==0.2.2"]
ur = ["g2p2-group-indic==0.2.2"]
uz = ["g2p2-group-turkic==0.2.2"]
vi = ["g2p2-group-sea==0.2.2"]
yi = ["g2p2-group-germanic==0.2.2"]
yo = ["g2p2-group-african==0.2.2"]
yue = ["g2p2-group-cjk==0.2.2"]
zh = ["g2p2-group-cjk==0.2.2"]

[project.urls]
Repository = "https://github.com/jqueguiner/g2p2"

[tool.maturin]
manifest-path = "Cargo.toml"
python-source = "python"
module-name = "g2p2._native"
features = ["pyo3/extension-module"]
